# template

./: LICENSE  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  mypy.ini  pyproject.toml  requirements.txt  swagger-coverage-config-{{cookiecutter.project_slug}}.json  telegram-notifier-config.ini
{{cookiecutter.project_name}}/aux_data/: constants.py
{{cookiecutter.project_name}}/checkers/: http_checkers.py
{{cookiecutter.project_name}}/clients/http/: __init__.py
{{cookiecutter.project_name}}/config/: prod.yaml
{{cookiecutter.project_name}}/utils/: generate_randoms.py
